tests/OK/llvm/conversion0.c
int main(void) {
	int a = 'a';
	a = 1.0;
	float b = 'b';
	b = 1;
	char c = 1;
	c = 1.0;
	return a + b + c;
}
