tests/FAIL/syntax/func/func-ret.c
float convert(int num){
	return num;
}

int main(void){
	char ch = 'a';
	float val;

	val = convert(ch);

	return 0;
}
